--- a/George/Src/Screen1.fx.yaml
+++ b/George/Src/Screen1.fx.yaml
@@ -1,7 +1,7 @@
 Screen1 As screen:
 
     Label1 As label:
-        Text: ="George changed from git repos"
+        Text: ="George changed v2 from git repos"
         X: =40
         Y: =40
         ZIndex: =1
